--- a/apps/movie-app/pages/index.module.css
+++ b/apps/movie-app/pages/index.module.css
@@ -1,2 +1,63 @@
+.flex {
+  display: flex;
+}
 .page {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 1600px;
+}
+.introWrapper {
+  height: 500px;
+  margin: 1.5em;
+  max-width: 1280px;
+  background-size: auto;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: #fff;
+}
+.intro-text {
+  color: #fff;
+  background-color: rgba(0, 0, 0, 0.315);
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  padding: 5em;
+}
+.intro-text h1 {
+  font-size: 3em;
+  font-weight: 900;
+  margin-bottom: 0.5em;
+}
+.intro-text p {
+  font-size: 1em;
+  font-weight: 800;
+  margin-bottom: 2em;
+}
+.top-rated {
+  text-align: left;
+  margin: 1em;
+}
+.top {
+  display: grid;
+  justify-content: center;
+  width: 100%;
+  gap: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+.discover {
+  margin: 1em;
+  width: 100%;
+  text-align: left;
+}
+.showcase {
+  display: grid;
+  width: 100%;
+  justify-content: center;
+  gap: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
