--- a/apps/movie-app/components/search/search.module.css
+++ b/apps/movie-app/components/search/search.module.css
@@ -5,6 +5,6 @@
   justify-content: center;
   align-items: center;
 }
-.search-container form > * {
+.search-container form > input {
   margin-right: 1em;
 }
