--- a/inconceivable-movie-reviews/apps/inconceivable-movie-reviews/styles/styles.css
+++ b/inconceivable-movie-reviews/apps/inconceivable-movie-reviews/styles/styles.css
@@ -5,3 +5,16 @@
 .app-body {
   margin: 1em
 }
+
+.website-logo {
+  filter: invert(100%);
+  -webkit-filter: invert(100%);
+  height: 48px;
+  width: 48px;
+}
+
+#popcorn-background {
+  background-image: url("../public/popcorn.jpeg");
+  height: 1000px;;
+}
+
