--- a/inconceivable-movie-reviews/apps/inconceivable-movie-reviews/styles/styles.css
+++ b/inconceivable-movie-reviews/apps/inconceivable-movie-reviews/styles/styles.css
@@ -2,7 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-
+html {
+  background: url("../public/popcorn.jpeg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
 
 .website-logo {
   filter: invert(100%);
